xnest: re-enable XKB support. #10015

XKB was disabled in 08928afb0500d46b0caa0a1d1244dee2ed80e6a0, with the comment
"Disable XKB, as we can't yet use it". Seems like "yet" is over, running GNOME
and changing XKB settings seems to work in Xnest now.

X.Org Bug 10015 <https://bugs.freedesktop.org/show_bug.cgi?id=10015>